Update authors section and most recent render

--- a/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
+++ b/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
@@ -487,10 +487,12 @@ Caltabellotta}
 
 Please cite this publication as:
 
-Johnston, M. A., Rosemond, R. C., Perl, E., Whitman, A., Barros, M.,
+Johnston*, M. A., Rosemond*, R. C., Perl, E., Whitman, A., Barros, M.,
 Champagnat, J., Schamp, A., Schiano, S., and Prior Caltabellotta, F.
 (2025) Status of Yelloweye rockfish off the U.S. West Coast in 2025.
 Pacific Fishery Management Council. {[}XX{]} p.
+
+*These authors contributed equally to this work.
 
 \newpage{}
 
@@ -2295,18 +2297,18 @@ metric tons (mt).}
 \tabularnewline
 
 \toprule
-Year & OFL..mt. & ABC..mt. & ACL..mt. & Catch..mt. \\ 
+Year & OFL (mt) & ABC (mt) & ACL (mt) & Total dead catch (mt) \\ 
 \midrule\addlinespace[2.5pt]
-2015 & 52.0 & 43.0 & 18.0 & 12.6 \\ 
-2016 & 52.0 & 43.0 & 19.0 & 9.6 \\ 
-2017 & 56.9 & 47.4 & 20.0 & 19.9 \\ 
-2018 & 57.5 & 47.9 & 20.0 & 18.7 \\ 
-2019 & 81.5 & 74.4 & 48.0 & 23.6 \\ 
-2020 & 84.2 & 76.9 & 49.0 & 18.2 \\ 
-2021 & 97.5 & 83.5 & 50.0 & 20.8 \\ 
-2022 & 98.1 & 83.2 & 51.0 & 33.7 \\ 
-2023 & 89.6 & 75.3 & 52.0 & 39.4 \\ 
-2024 & 91.2 & 75.9 & 53.3 & 15.1 \\ 
+2015 & 52 & 43 & 18 & 12 \\ 
+2016 & 52 & 43 & 19 & 9 \\ 
+2017 & 57 & 47 & 20 & 20 \\ 
+2018 & 58 & 48 & 20 & 19 \\ 
+2019 & 82 & 74 & 48 & 24 \\ 
+2020 & 84 & 77 & 49 & 18 \\ 
+2021 & 97 & 83 & 50 & 21 \\ 
+2022 & NA & NA & NA & 34 \\ 
+2023 & 90 & 75 & 52 & 39 \\ 
+2024 & 91 & 76 & 53 & 15 \\ 
 \bottomrule
 
 \end{longtable}
