--- a/report/SAR_USWC_Yelloweye_rockfish_skeleton.qmd
+++ b/report/SAR_USWC_Yelloweye_rockfish_skeleton.qmd
@@ -65,7 +65,6 @@ author:
         city: 'Olympia, WA'
         state: 'WA'
         postal-code: '98504-3150'
-author-note: "*These authors contributed equally to this work."
 date: today
 lang: en 
 keep-tex: true 
@@ -221,7 +220,9 @@ R0 <- output |>
 
 Please cite this publication as: 
 
-Johnston, M. A., Rosemond, R. C., Perl, E., Whitman, A., Barros, M., Champagnat, J., Schamp, A., Schiano, S., and  Prior Caltabellotta, F. (2025) Status of Yelloweye rockfish off the U.S. West Coast in 2025. Pacific Fishery Management Council. [XX] p.
+Johnston\*, M. A., Rosemond\*, R. C., Perl, E., Whitman, A., Barros, M., Champagnat, J., Schamp, A., Schiano, S., and  Prior Caltabellotta, F. (2025) Status of Yelloweye rockfish off the U.S. West Coast in 2025. Pacific Fishery Management Council. [XX] p.
+
+\*These authors contributed equally to this work.
 
 {{< pagebreak >}} 
 
