--- a/report/04b_model_results.qmd
+++ b/report/04b_model_results.qmd
@@ -20,7 +20,7 @@ Length-based selectivity curves estimated in the assessment are shown for all fl
 
 <!-- Residual analysis for the base-run configuration, e.g., residual plots, time series plots of observed and predicted values, etc.   -->
 
-Model fits to the fishery CPUE and survey indices are presented in @fig-indexfit3 through @fig-indexfit12. The base model predicted a decreasing trend in the triennial survey between 1980 and 2004 (@fig-indexfit10) and a slightly increasing trend for the NWFSC trawl survey between 2003 and 2024 (@fig-indexfit11). The model predicted a relatively flat trend through the IPHC survey index despite the upward trend seen in the last three years as of this update (@fig-indexfit12). The triennial survey index indicated a population decrease in 1992 and lower estimates (compared with pre-1992) persisted through the end of the index time series. This decrease in the abundance index coincided with decrease in number of biological samples collected from this survey. No changes have been implemented to the triennial survey between 1989 and 1992. In 1995, the survey timing slightly shifted from early fall to mid-summer, approximately a month earlier that previous surveys. This shift in timing, however, seems unlikely to impact our understanding of yelloweye rockfish abundance trends during that period, given the sedentary life history of the species. Additionally, the change in the index trend was observed before the slight shift in survey timing. The California MRFSS recreational CPUE index tracked the decline in observations through the 1990s (@fig-indexfit3), and a slight increase in abundance was predicted in the Oregon MRFSS/ORBS recreational index during the 2000s (@fig-indexfit6). The Oregon recreational observer index showed a small and very uncertain increasing trend in the 2000s (@fig-indexfit9). The California CPFV charter series index indicated a relatively flat trajectory prior to 1992 with a drop in stock abundance from 1992 on (@fig-indexfit8). The model predicted a decreasing trend for the Washington Recreational index despite the relatively large variances on many of the observations, which does not match the relative stability of the index from 1982 to the early 2000s (@fig-indexfit7).
+Model fits to the fishery CPUE and survey indices are presented in @fig-indexfit3 through @fig-indexfit12. The base model predicted a decreasing trend in the triennial survey between 1980 and 2004 (@fig-indexfit10) and a slightly increasing trend for the NWFSC trawl survey between 2003 and 2024 (@fig-indexfit11). The model predicted a relatively flat trend through the \gls{iphc} survey index despite the upward trend seen in the last three years as of this update (@fig-indexfit12). The triennial survey index indicated a population decrease in 1992 and lower estimates (compared with pre-1992) persisted through the end of the index time series. This decrease in the abundance index coincided with decrease in number of biological samples collected from this survey. No changes have been implemented to the triennial survey between 1989 and 1992. In 1995, the survey timing slightly shifted from early fall to mid-summer, approximately a month earlier that previous surveys. This shift in timing, however, seems unlikely to impact our understanding of yelloweye rockfish abundance trends during that period, given the sedentary life history of the species. Additionally, the change in the index trend was observed before the slight shift in survey timing. The California \gls{mrfss} recreational CPUE index tracked the decline in observations through the 1990s (@fig-indexfit3), and a slight increase in abundance was predicted in the Oregon \gls{mrfss}/\gls{orbs} recreational index during the 2000s (@fig-indexfit6). The Oregon recreational observer index showed a small and very uncertain increasing trend in the 2000s (@fig-indexfit9). The California \gls{cpfv} charter series index indicated a relatively flat trajectory prior to 1992 with a drop in stock abundance from 1992 on (@fig-indexfit8). The model predicted a decreasing trend for the Washington Recreational index despite the relatively large variances on many of the observations, which does not match the relative stability of the index from 1982 to the early 2000s (@fig-indexfit7).
 
 The model fitted length data aggregated across years reasonably well for all fleets (@fig-agglencomps). The model fits to length frequency distributions by fleet across years are shown in **add length comps by fleet/year - ADW - suggest these are all not needed, are there specific fleets we should highlight?**. Pearson residuals for the fits by fleet and year are shown in @fig-pearsonlenfit1 and @fig-pearsonlenfit2. The length data are very sparse in many years and the quality of fit varies among years and fleets, reflecting the differences in the quantity and quality of the data. However, neither length composition data nor the Pearson residuals, which reflect the noise in the data both within and among years, exhibit obvious patterns for any fleet. The data for fishing fleets are particularly poor after 2002 after retention of yelloweye rockfish was prohibited in most fleets and limited in trawl fleets. Input sample sizes for length composition data were tuned down using the Francis data weighting method **add weighting table**. Francis weighting fits to the mean lengths for each fleet by year (with 95% confidence intervals) are shown in **Figure X** through **Figure X** (**ADW note - we don't normally include these in the report - do we need them?**).
 
