--- a/report/05_management.qmd
+++ b/report/05_management.qmd
@@ -10,7 +10,7 @@
 
 This assessment estimates that the stock of Yelloweye Rockfish off the continental U.S. Pacific Coast is currently at **XXX%** of its unexploited level. This is above the overfished threshold of SB25%, but below the management target of SB40% of unfished spawning biomass. Both areas are above the overfished level of 25%. The assessment estimates that the coastwide spawning output of Yelloweye Rockfish dropped below the SB40% target for the first time in 1986 and below the overfished SB25% threshold in 1993, as a result of intense fishing by commercial and recreational fleets. It continued to decline and reached 14.2% of its unfished output in 2000 (**Table XX**). The same year, the stock was declared overfished. Since then, the spawning output has slowly increased due to management regulations implemented to foster stock rebuilding.
 
-Reference points for the base model are summarized in **Table XX**. Unfished spawning stock output for Yelloweye Rockfish was estimated to be **XXXX** million eggs (95% confidence interval: **XXXX-XXXX** million eggs). The stock is declared overfished if the current spawning output is estimated to be below the minimum stock size threshold (MSST) of 25% of unfished level (SB25%). The management target for Yelloweye Rockfish is defined as 40% of the unfished spawning output (SB40%), which is estimated by the model to be **XXX** million eggs (95% confidence interval: **XXX-XXX**), which corresponds to an exploitation rate of 0.025. This harvest rate provides an equilibrium yield of **XXX** mt at SB40% (95% confidence interval: **XX-XXX** mt). The model estimate of maximum sustainable yield (MSY) is **XXX** mt (95% confidence interval: **XXX-XXX** mt). The estimated spawning stock output at MSY is **XXX** million eggs (95% confidence interval: XXX-XXX million eggs). The exploitation rate corresponding to the estimated SPRMSY of F36% is 0.034.
+Reference points for the base model are summarized in **Table XX**. Unfished spawning stock output for Yelloweye Rockfish was estimated to be **XXXX** million eggs (95% confidence interval: **XXXX-XXXX** million eggs). The stock is declared overfished if the current spawning output is estimated to be below the \gls{msst} of 25% of unfished level (SB25%). The management target for Yelloweye Rockfish is defined as 40% of the unfished spawning output (SB40%), which is estimated by the model to be **XXX** million eggs (95% confidence interval: **XXX-XXX**), which corresponds to an exploitation rate of 0.025. This harvest rate provides an equilibrium yield of **XXX** mt at SB40% (95% confidence interval: **XX-XXX** mt). The model estimate of maximum sustainable yield (MSY) is **XXX** mt (95% confidence interval: **XXX-XXX** mt). The estimated spawning stock output at MSY is **XXX** million eggs (95% confidence interval: XXX-XXX million eggs). The exploitation rate corresponding to the estimated SPRMSY of F36% is 0.034.
 
 This assessment estimates that the 2024 SPR is **XX%**. The SPR used for setting the OFL is 50%, while the SPR-based management fishing mortality target **specified in the current rebuilding plan and used to determine the ACL is 76%. Relative exploitation rates (calculated as catch/biomass of age-8 and older fish) are estimated to have been below 1% during the last decade**. This assessment estimates that Yelloweye Rockfish was fished beyond the relative SPR ratio (calculated as 1-SPR/1-SPRTarget=0.5) between 1977 and 2000. The equilibrium yield curve is shown in **Figure XX**.
 
@@ -20,11 +20,11 @@ The base model estimate for 2025 spawning depletion is **XX%**. The primary axis
 
 **We explored different approaches to identify alternative natural mortality values, including using the 12.5 and 87.5 percentiles of the Hamel prior distribution. However, this approach yielded values that were considered to be not realistic. For instance, the 12.5 percentile value of 0.031y-1 corresponded to an age of 175 years, which substantially exceeds the oldest Yelloweye Rockfish individual ever reported.**
 
-Twelve-year forecasts for each state of nature were calculated for two catch scenarios (**Table XX**). One scenario assumes 2025-2026 catches to be 60% of year-specific ACL values, and 2027-2036 catches to be 60% of removals calculated using current rebuilding SPR of 76% applied to the base model. The second catch scenario assumes 2025-2026 removals to be equal to year-specific ACLs, and 2027-2036 catches calculated using current rebuilding SPR of 76% applied to the base model.
+Twelve-year forecasts for each state of nature were calculated for two catch scenarios (**Table XX**). One scenario assumes 2025-2026 catches to be 60% of year-specific \gls{acl} values, and 2027-2036 catches to be 60% of removals calculated using current rebuilding SPR of 76% applied to the base model. The second catch scenario assumes 2025-2026 removals to be equal to year-specific \gls{acl}s, and 2027-2036 catches calculated using current rebuilding SPR of 76% applied to the base model.
 
 ## Evaluation of Scientific Uncertainty
 
-The model estimated uncertainty around the 2025 spawning biomass for the model **is 𝜎 = XX**. The uncertainty around the OFL in 2025 **is 𝜎 = XX**. Each of these are likely underestimates of overall uncertainty due to the necessity to fix several key population dynamics parameters (e.g., steepness, recruitment variance) and also because there is no explicit incorporation of model structural uncertainty (although see the decision table for alternative states of nature).
+The model estimated uncertainty around the 2025 spawning biomass for the model **is 𝜎 = XX**. The uncertainty around the \gls{ofl} in 2025 **is 𝜎 = XX**. Each of these are likely underestimates of overall uncertainty due to the necessity to fix several key population dynamics parameters (e.g., steepness, recruitment variance) and also because there is no explicit incorporation of model structural uncertainty (although see the decision table for alternative states of nature).
 
 ## Regional management considerations
 
