--- a/report/support_files/in-header.tex
+++ b/report/support_files/in-header.tex
@@ -2,35 +2,25 @@
 \usepackage{graphicx}
 % and their extensions so you won't have to specify these with
  % every instance of \includegraphics
- \usepackage{pdfcomment}
+\usepackage{pdfcomment}
 \DeclareGraphicsExtensions{.pdf,.jpeg,.png}
 \usepackage{wallpaper} % for the background image on title page
 \usepackage{geometry}
+\usepackage{lastpage}
 % set font
 
-% added by Ross
-% % set font - - depends upon the driver
-% \ifPDFTeX
-%  %% only want this in body section headings and ToC, using \sf
-%  \def\sfdefault{phv}% Helvetica instead of its clone Arial
-%  \renewcommand{\sectfont}{\normalcolor
-%   \def\bfdefault{bc}% bold condensed; i.e., narrow
-%   \maybesffamily \bfseries }%% uses uhvb8ac
-% % \def\sfdefault{lmss}% Latin Modern replaces Arial
-% % \renewcommand{\sectfont}{\normalcolor
-%  % \fontseries{sbc}\fontfamily{lmss}\selectfont }%% uses lmssdc10
-% \else
+\usepackage{lmodern}
+\usepackage[T1]{fontenc}
 
-\usepackage{fontspec}
-\setsansfont[Ligatures=TeX]{Arial Narrow}
+\newfontfamily\sectionfont[Color=Black]{Latin Modern Sans}
+\newfontfamily\subsectionfont[Color=Black]{Latin Modern Sans}
+\newfontfamily\subsubsectionfont[Color=Black]{Latin Modern Sans}
 
-% added by Ross
-%\fi
-%\usepackage[scaled=0.9]{helvet}% needed later to replace Arial Narrow
 \usepackage[headsepline=0.005pt:,footsepline=0.005pt:,plainfootsepline,automark]{scrlayer-scrpage}
 \clearpairofpagestyles
 \ohead[]{\headmark} \cofoot[\pagemark]{\pagemark}
 \lohead{Yelloweye Rockfish assessment 2025}
 \ModifyLayer[addvoffset=-.6ex]{scrheadings.foot.above.line}
 \ModifyLayer[addvoffset=-.6ex]{plain.scrheadings.foot.above.line}
-\setkomafont{pageheadfoot}{\small}
+% \setkomafont{pageheadfoot}{\small}
+\newfontfamily\headfootfont[Color=Black]{Latin Modern Sans}
