--- a/report/SAR_USWC_Yelloweye_rockfish_skeleton.qmd
+++ b/report/SAR_USWC_Yelloweye_rockfish_skeleton.qmd
@@ -65,6 +65,27 @@ author:
         city: 'Olympia, WA'
         state: 'WA'
         postal-code: '98504-3150'
+  - name: 'Vladlena Gertseva'
+    affiliations:
+      - name: 'NOAA Fisheries Northwest Fisheries Science Center'
+        address: '2725 Montlake Boulevard East'
+        city: 'Seattle'
+        state: 'WA'
+        postal-code: '98112-2097'
+  - name: 'Ian Taylor'
+    affiliations:
+      - name: 'NOAA Fisheries Northwest Fisheries Science Center'
+        address: '2725 Montlake Boulevard East'
+        city: 'Seattle'
+        state: 'WA'
+        postal-code: '98112-2097'
+  - name: 'Kiva Oken'
+    affiliations:
+      - name: 'NOAA Fisheries Northwest Fisheries Science Center'
+        address: '2725 Montlake Boulevard East'
+        city: 'Seattle'
+        state: 'WA'
+        postal-code: '98112-2097'
 date: today
 lang: en 
 keep-tex: true 
