unbold section reference

--- a/report/04a_model_summary.qmd
+++ b/report/04a_model_summary.qmd
@@ -25,7 +25,7 @@ Briefly, the Yelloweye Rockfish model is a coastwide, single-sex, two-area model
 A list of changes that were made to the model compared to the previous assessment [@gertseva_stock_2017] are listed below. 
 
 - Data: 
-    - Detailed information on specific updates and changes to the data included in the model are included in Section **@sec-data** but are summarized below. 
+    - Detailed information on specific updates and changes to the data included in the model are included in Section @sec-data but are summarized below. 
     - The landing time series were corrected and updated through the end of 2024 for California, Oregon and Washington. Overall, there was little change in the model results when updating and extending the catch time series, even after changes in the historical catch **(@fig-bridge3-comp2** and **@fig-bridge3-comp4)**. Though, the age 8+ biomass increased more for the most recent years than the forecasted estimates from 2017 **(@fig-bridge3-comp18)**.   
     - Indices of abundance were updated with recent data, where available, and re-analyzed using more up-to-date methods. Updating indices lead to a slight decrease in ln($R$~0~), reducing the spawning output by very little **(@fig-bridge5-comp2)**.
     - Length and age compositions from all fishery removal and index fleets were updated and tuned through 2024. The addition of composition data greatly increased ln($R$~0~), which led to an increase in the spawning output, particularly for 1920-1980 **(@fig-bridge14-comp2)**. This new data also changed the patter of the recruitment deviations significantly from 1990-2024 **(@fig-bridge14-comp11)**. From 1990-2005 recruitment was lower than predicted in the last assessment, then from 2006-2016 recruitment was higher than the past, and finally recruitment dropped very low for 2017-2021. This shift to lower estimated recruitment for recent years seems to have slowed the recovery curve **(@fig-bridge14-comp2)**.
