--- a/report/asar_references.bib
+++ b/report/asar_references.bib
@@ -2392,3 +2392,12 @@ pages = "740~p",
   year = {2009},
   pages = {435}
 }
+
+@article{Taylor_r4ss_lessons_2021,
+author = {Taylor, I.G. and Doering, K.L. and Johnson, K.L. and Wetzel, C.R. and Stewart, I.J.},
+journal = {Fisheries Research},
+doi = {https://doi.org/10.1016/j.fishres.2021.105924},
+title = {Beyond visualizing catch-at-age models: Lessons learned from the r4ss package about software to support stock assessments},
+year = {2021},
+volume = {239}
+}
