add section: unresolved problems and major uncertainties

--- a/report/04c_model_diagnostics.qmd
+++ b/report/04c_model_diagnostics.qmd
@@ -36,3 +36,9 @@ In the base model $h$ is fixed at 0.718, like the 2017 assessment, because much 
 A likelihood profile analysis for ln($R$~0~) shows a strongly informed initial recruitment value in the base model (@fig-rzero-piner). Most of the information for this parameter is coming from the length data. Within the length composition likelihood component, all sources of length compositions are equally informative. The index and age data are relatively uninformative. Changes in ln($R$~0~) results in relatively small changes in the scale of the population (@fig-rzero-sp-output and @fig-rzero-parm) compared to the 2017 assessment model. 
 
 ## Unresolved Problems and Major Uncertainties
+
+Main life history parameters, such as natural mortality and stock-recruit curve steepness, generally contribute significant uncertainty to stock assessments. These values were fixed in this assessment, as they were in the benchmark assessment because the benchmark model was unable to reliably estimate these quantities [@gertseva_stock_2017]. These quantities are essential for understanding the dynamics of the stock and determining projected rebuilding. Alternative values of these parameters were explored through both sensitivity and likelihood profile analyses. Maturity parameters were fixed in this assessment, as they were in benchmark assessment [@gertseva_stock_2017]. Maturity schedules are generally estimated outside of the assessment, and the maturity estimates were not updated since the benchmark assessment. These parameters, once updated, may influence estimates of spawning stock output.
+
+Although significant progress has been made in reconstructing historical landings, early catches of Yelloweye Rockfish continue to be uncertain.
+
+The model fits to the indices generally fall within uncertainty intervals but do not capture the temporal dynamics of each index, thus the indices may not be as informative as they would be if the temporal dynamics were fit well. In addition, the fishery-independent indices available (e.g., the WCGBTS and IPHC indices) do not target Yelloweye Rockfish specifically and, thus, may not be the most appropriate indicator of abundance dynamics.
